--- a/config/secrets.yml
+++ b/config/secrets.yml
@@ -21,4 +21,5 @@ test:
 # instead read values from the environment.
 production:
   domain_name: <%= ENV["DOMAIN_NAME"] %>
-  secret_key_base: <%= ENV["SECRET_KEY_BASE"] %>
+  # secret_key_base: <%= ENV["SECRET_KEY_BASE"] %>
+  secret_key_base: <%= secure_token %>
